--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -10,7 +10,7 @@
       {
         "source": "/(.*)",
         "headers": [
-          { "key": "Access-Control-Allow-Origin", "value": "*" },
+          { "key": "Access-Control-Allow-Origin", "value": "https://job-zee-client-six.vercel.app" },
           { "key": "Access-Control-Allow-Methods", "value": "GET,HEAD,PUT,PATCH,POST,DELETE" },
           { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With,Content-Type,Accept" }
         ]
